<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <TextView
        android:id="@+id/player_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/verify_identity_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_identity_text"
        android:gravity="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/player_role_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="Temporary Text" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <Button
            android:id="@+id/verification_no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/no_text" />

        <Button
            android:id="@+id/verification_yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/yes_text" />

    </LinearLayout>

    <Button
        android:id="@+id/dismiss_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismiss_text" />

</LinearLayout>