<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/view_role_player_name"
        android:textSize="20sp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3.75"/>

    <Button
        android:text="@string/kill_text"
        android:id="@+id/kill_player_button"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:backgroundTint="@color/red"
        android:layout_weight="1"
        />

    <Button
        android:text="@string/undo_kill_text"
        android:id="@+id/undo_kill_player_button"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />

    <Button
        android:text="@string/view_role_text"
        android:id="@+id/view_role_button"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/view_player_role_textview"
        android:textSize="15sp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"/>

</LinearLayout>