<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/moderator_day_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >

            <Button
                android:text="@string/go_to_night_phase_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:id="@+id/go_to_night_phase_button"
                android:backgroundTint="@color/gray"
                android:textColor="@color/white"
                />

            <TextView
                android:text="@string/moderator_day_phase_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:id="@+id/moderator_day_textview"
                android:gravity="center_horizontal"
                android:textSize="30sp" />

            <Button
                android:text="@string/day_phase_script_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:padding="@dimen/button_padding"
                android:id="@+id/day_phase_script_button"
                />

            <TextView
                android:text="@string/day_phase_script_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/day_phase_script_textview"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:paddingBottom="@dimen/text_size"
                android:textSize="17sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/day_view_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:gravity="center" >

                <Button
                    android:text="Living Players"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/living_players_day_button"
                    />

                <Button
                    android:text="Dead Players"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/dead_players_day_button"
                    />

            </LinearLayout>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:id="@+id/day_view_alive_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ListView
                    android:id="@+id/moderator_day_view_role_list"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"/>

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:id="@+id/day_view_dead_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ListView
                    android:id="@+id/moderator_day_view_role_list_dead"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:id="@+id/moderator_night_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal" >

            <Button
                android:text="@string/go_to_day_phase_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:textAllCaps="true"
                android:id="@+id/go_to_day_phase_button"
                android:backgroundTint="@color/yellow" />

            <TextView
                android:text="@string/moderator_night_phase_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:id="@+id/moderator_night_textview"
                android:gravity="center_horizontal"
                android:textSize="30sp" />

            <Button
                android:text="@string/night_phase_script_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:textAllCaps="false"
                android:id="@+id/night_phase_script_button"
                />

            <TextView
                android:text="@string/night_phase_script_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/night_phase_script_textview"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:paddingBottom="@dimen/text_size"
                android:textSize="17sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/night_view_players"
                android:padding="@dimen/button_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <Button
                    android:text="Living Players"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/thin_button_padding"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:id="@+id/living_players_night_button"
                    />

                <Button
                    android:text="Dead Players"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/thin_button_padding"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:id="@+id/dead_players_night_button"
                    />

            </LinearLayout>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:id="@+id/night_view_alive_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ListView
                    android:id="@+id/moderator_night_view_role_list"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"/>

            </LinearLayout>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:id="@+id/night_view_dead_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <ListView
                    android:id="@+id/moderator_night_view_role_list_dead"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
