<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Placeholder Text"
        android:textSize="40sp"
        android:textStyle="bold"
        android:id="@+id/total_number_of_players_textview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/roles_error_message_text"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/roles_error_message" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_delete"
            android:id="@+id/werewolves_minus_button"
            android:tint="@android:color/white" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:text="@string/werewolves_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/werewolves_label_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/number_of_werewolves_textview" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_input_add"
            android:id="@+id/werewolves_add_button"
            android:tint="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_delete"
            android:id="@+id/investigators_minus_button"
            android:tint="@android:color/white" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:text="@string/investigators_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/investigators_label_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/number_of_investigators_textview" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_input_add"
            android:id="@+id/investigators_add_button"
            android:tint="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_delete"
            android:id="@+id/doctors_minus_button"
            android:tint="@android:color/white" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:text="@string/doctors_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/doctors_label_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/number_of_doctors_textview" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_input_add"
            android:id="@+id/doctors_add_button"
            android:tint="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_delete"
            android:id="@+id/townspersons_minus_button"
            android:tint="@android:color/white" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:text="@string/townspersons_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/townspersons_label_textview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/number_of_townsperson_textview" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_input_add"
            android:id="@+id/townspersons_add_button"
            android:tint="@android:color/white" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:text="@string/continue_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/continue_to_view_roles_button"
        android:layout_marginBottom="@dimen/text_size" />

</LinearLayout>
